samples/_failures_safe/1761637541_652e07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0a74ef7.c: In function ‘print_token’:
./samples/SAFE/__tmp_d0a74ef7.c:148:20: error: missing terminating " character
  148 |             printf("EOF at line
      |                    ^~~~~~~~~~~~
./samples/SAFE/__tmp_d0a74ef7.c:148:13: error: expected expression at end of input
  148 |             printf("EOF at line
      |             ^~~~~~
./samples/SAFE/__tmp_d0a74ef7.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d0a74ef7.c:148:13: error: expected declaration or statement at end of input
